--- a/Flask-Forms-Lab/templates/friend_exists.html
+++ b/Flask-Forms-Lab/templates/friend_exists.html
@@ -14,7 +14,15 @@
 </head>
 <body>
 
+   {% if name in friends %}
 
+    <h1> True <h1>
+
+    {% else %}
+
+    <h1> False </h1>
+
+    {% endif %}
 
 </body>
 </html>
